fix colour contrast

--- a/src/styles/document.scss
+++ b/src/styles/document.scss
@@ -67,19 +67,20 @@
 
 .documents {
   .card {
-    padding: 1rem;
     margin-bottom: 1rem;
+    padding: 0.5rem 1rem;
   }
 
   .card-title {
-    text-transform: capitalize;
-    margin: 0;
-    display: flex;
     align-items: center;
+    color: var(--black);
+    display: flex;
     font-size: 16px;
-    min-height: 4em;
     justify-content: center;
     margin-top: 0.5rem;
+    margin: 0;
+    min-height: 4em;
+    text-transform: capitalize;
   }
 
   .card-body {
